feat: Add row count strategy to create and delete tasks (#168)
* feat: Add row count strategy to create and delete tasks

Adds the `row_count_strategy` parameter to all `create` and `delete` Rake tasks, allowing control over row counting during these operations. This aligns them with the existing `refresh` tasks.

The default `row_count_strategy` for all services and Rake tasks is changed from `:estimated` to `:none` to make row counting an explicit, opt-in action.

Updates documentation and tests to reflect these changes.

* docs: Fix minor formatting issues

Improves documentation readability by removing trailing whitespace and adding a blank line for better list separation.

* docs: Correct Rake task examples in documentation

Removes unnecessary commas from several Rake task examples. This change ensures the documented commands are cleaner and more accurate.

* Removes redundant Dependabot entries

Removes Dependabot configurations for `.vscode` directories. These entries are unnecessary as the parent directories are already being scanned for dependencies.

--- a/docs/pages/4.2 usage-views.md
+++ b/docs/pages/4.2 usage-views.md
@@ -80,9 +80,10 @@ You can refresh the materialized view directly via the service object or enqueue
 
 ### Direct service call
 
-Use this for logic that needs direct control, or for scripts/migrations where background jobs aren't suitable. It supports two strategies: `:estimated` (default) and `:full`.
+Use this for logic that needs direct control, or for scripts/migrations where background jobs aren't suitable.
+`row_count_strategy` can be `:none` (default) or `:estimated` or `:exact`.
 
-`:estimated` uses PostgreSQL's query planner to estimate the number of rows to refresh, which is faster for large datasets. `:full` perform proper count of rows, which is more accurate but slower. In most cases, `:estimated` is sufficient.
+`:estimated` uses PostgreSQL's query planner to estimate the number of rows to refresh, which is faster for large datasets. `:exact` perform proper count of rows, which is more accurate but slower. In most cases, `:estimated` is sufficient.
 
 ```ruby
 # Direct service call
@@ -96,14 +97,17 @@ end
 
 ### Enqueue background job
 
-Use this in application code where you want to offload the refresh to a background job. It supports two strategies: `:estimated` (default) and `:full`.
+Use this in application code where you want to offload the refresh to a background job.
+`row_count_strategy` can be `:none` (default) or `:estimated` or `:exact`.
+
+`:estimated` uses PostgreSQL's query planner to estimate the number of rows to refresh, which is faster for large datasets. `:exact` perform proper count of rows, which is more accurate but slower. In most cases, `:estimated` is sufficient.
 
 ```ruby
 # Enqueue background job
 MatViews::Jobs::Adapter.enqueue(
   MatViews::RefreshViewJob,
   queue: MatViews.configuration.job_queue,
-  args:  [definition.id, :estimated] # or :full
+  args:  [definition.id, :estimated] # or :exact or :none
 )
 ```
 
@@ -112,14 +116,14 @@ MatViews::Jobs::Adapter.enqueue(
 You can also use the provided Rake tasks to refresh materialized views by name, id, or all at once.
 
 - All tasks require confirmation unless you pass the `--yes` flag.
-- `row_count_strategy` can be `:estimated` (default) or `:full`.
+- `row_count_strategy` can be `:none` (default) or `:estimated` or `:exact`.
 - All tasks enqueue background jobs, using Job adapter and queue from configuration.
 
 ```bash
 # Refresh by name
 bundle exec rake mat_views:refresh_by_name\[my_mat_view,estimated,--yes]
 # Refresh by id
-bundle exec rake mat_views:refresh_by_id\[1,full,--yes]
+bundle exec rake mat_views:refresh_by_id\[1,exact,--yes]
 # Refresh all
 bundle exec rake mat_views:refresh_all\[estimated,--yes]
 ```
@@ -169,9 +173,9 @@ You can also use the provided Rake tasks to delete materialized views by name, i
 
 ```bash
 # Delete by name
-bundle exec rake mat_views:delete_by_name\[my_mat_view,cascade,--yes]
+bundle exec rake mat_views:delete_by_name\[my_mat_view,cascade,row_count_strategy,--yes]
 # Delete by id
-bundle exec rake mat_views:delete_by_id\[1,cascade,--yes]
+bundle exec rake mat_views:delete_by_id\[1,cascade,row_count_strategy,--yes]
 # Delete all
-bundle exec rake mat_views:delete_all\[cascade,--yes]
+bundle exec rake mat_views:delete_all\[cascade,row_count_strategy,--yes]
 ```
