--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -25,9 +25,21 @@ The engine ships a set of **Rake tasks** for creating, refreshing, and deleting 
 
 ### Create
 
-- `mat_views:create_by_name[view_name, force, --yes]`
-- `mat_views:create_by_id[definition_id, force, --yes]`
-- `mat_views:create_all[force, --yes]`
+- `mat_views:create_by_name[view_name, force, row_count_strategy, --yes]`
+- `mat_views:create_by_id[definition_id, force, row_count_strategy, --yes]`
+- `mat_views:create_all[force, row_count_strategy, --yes]`
+
+`force` is boolean-ish:
+
+- `false` (default) → `CREATE MATERIALIZED VIEW ...` (fails if exists)
+- `true` → `CREATE OR REPLACE MATERIALIZED VIEW ...` (drops first if exists)
+
+`row_count_strategy` can be:
+
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
+- `exact` (uses `COUNT(*)`)
+- blank to skip counting (if you pass nothing)
 
 ### Refresh
 
@@ -37,20 +49,28 @@ The engine ships a set of **Rake tasks** for creating, refreshing, and deleting 
 
 `row_count_strategy` can be:
 
-- `estimated` (default; fast, uses `reltuples`)
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
 - `exact` (uses `COUNT(*)`)
 - blank to skip counting (if you pass nothing)
 
 ### Delete
 
-- `mat_views:delete_by_name[view_name, cascade, --yes]`
-- `mat_views:delete_by_id[definition_id, cascade, --yes]`
-- `mat_views:delete_all[cascade, --yes]`
+- `mat_views:delete_by_name[view_name, cascade, row_count_strategy, --yes]`
+- `mat_views:delete_by_id[definition_id, cascade, row_count_strategy, --yes]`
+- `mat_views:delete_all[cascade, row_count_strategy, --yes]`
 
 `cascade` is boolean-ish:
 
 - `false` (default) → `RESTRICT` (fails if dependents exist)
 - `true` → `CASCADE`
+
+`row_count_strategy` can be:
+
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
+- `exact` (uses `COUNT(*)`)
+- blank to skip counting (if you pass nothing)
 
 ---
 
@@ -106,7 +126,7 @@ Tasks accept **positional args** and optional **env** overrides:
 
 ```bash
 # Create by name (no force), skip confirm
-bin/rake 'mat_views:create_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:create_by_name[mv_user_activity,--yes]'
 
 # Create by id with force=true, skip confirm
 bin/rake 'mat_views:create_by_id[42,true,--yes]'
@@ -122,7 +142,7 @@ YES=1 FORCE=true bin/rake 'mat_views:create_by_name[mv_user_activity]'
 
 ```bash
 # Refresh by name with default row_count_strategy (:estimated), skip confirm
-bin/rake 'mat_views:refresh_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:refresh_by_name[mv_user_activity,--yes]'
 
 # Refresh by id with exact row count, skip confirm
 bin/rake 'mat_views:refresh_by_id[42,exact,--yes]'
@@ -138,7 +158,7 @@ YES=1 ROW_COUNT_STRATEGY=exact bin/rake 'mat_views:refresh_by_name[mv_user_activ
 
 ```bash
 # Delete by name with cascade=false (default), skip confirm
-bin/rake 'mat_views:delete_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:delete_by_name[mv_user_activity,--yes]'
 
 # Delete by id with cascade=true, skip confirm
 bin/rake 'mat_views:delete_by_id[42,true,--yes]'
