--- a/mat_views/config/locales/en.yml
+++ b/mat_views/config/locales/en.yml
@@ -85,6 +85,7 @@ en:
         status: "Select status"
   i18n:
     languages:
+      en-AU-ocker: Aussie (Ocker)
       en-CA: English (Canada)
       en-US: English (United States)
   mat_views:
