lang: Add localization: en-US-pirate
Introduces a new "Pirate English" (en-US-pirate) locale for a more entertaining user experience.

This includes:
- A complete translation file with pirate-themed terminology.
- Updates to the application engine and tests to support the new locale.
- New documentation pages with screenshots for both light and dark themes.

--- a/mat_views/config/locales/en.yml
+++ b/mat_views/config/locales/en.yml
@@ -88,6 +88,7 @@ en:
       en-AU-ocker: Aussie (Ocker)
       en-CA: English (Canada)
       en-US: English (United States)
+      en-US-pirate: Pirate English (Arrr!)
   mat_views:
     actions: "Actions"
     all_definitions: "All definitions"
