--- a/mat_views/config/locales/en-AU-ocker.yml
+++ b/mat_views/config/locales/en-AU-ocker.yml
@@ -88,6 +88,7 @@ en-AU-ocker:
       en-AU-ocker: Aussie (Ocker)
       en-CA: English (Canada)
       en-US: English (United States)
+      en-US-pirate: Pirate English (Arrr!)
   mat_views:
     actions: "Stuff ya can do"
     all_definitions: "Every def'n"
