--- a/mat_views/config/locales/en-US-pirate.yml
+++ b/mat_views/config/locales/en-US-pirate.yml
@@ -85,6 +85,7 @@ en-US-pirate:
         status: "Pick the fate"
   i18n:
     languages:
+      en-AU: English (Australia)
       en-AU-ocker: Aussie (Ocker)
       en-CA: English (Canada)
       en-US: English (United States)
