lang: Add localization: en-BORK\
Introduces the `en-BORK` (Swedish Chef) locale to the application.

This change includes:
- A new YAML file with translations for the `en-BORK` language.
- Updates to the engine to register the new locale as available.
- Integration into the CI workflow to generate and upload documentation screenshots for the new locale.
- New documentation pages displaying the Admin UI screenshots for `en-BORK`.
- Adjustments to feature tests to cover the new language option.

--- a/mat_views/config/locales/en-AU.yml
+++ b/mat_views/config/locales/en-AU.yml
@@ -87,6 +87,7 @@ en-AU:
     languages:
       en-AU: English (Australia)
       en-AU-ocker: Aussie (Ocker)
+      en-BORK: Børk! Børk! Børk!
       en-CA: English (Canada)
       en-US: English (United States)
       en-US-pirate: Pirate English (Arrr!)
