--- a/docs/pages/9.x admin-ui-en-bork.md
+++ b/docs/pages/9.x admin-ui-en-bork.md
@@ -1,12 +1,12 @@
 ---
-title: "English (Australia)"
+title: "English (BORK)"
 layout: page
 parent: Admin UI
-nav_order: 2
-permalink: /admin-ui/en-AU
+nav_order: 3
+permalink: /admin-ui/en-BORK
 ---
 
-# English (Australia) Admin UI
+# English (BORK) Admin UI
 
 ## Light Theme
 
@@ -14,43 +14,43 @@ permalink: /admin-ui/en-AU
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-AU/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-AU/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-AU/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to create or edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-AU/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-AU/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-AU/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-AU/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
 
 ## Dark Theme
 
@@ -58,40 +58,40 @@ Shows the user preferences page where you can configure settings related to the 
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to create or edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-AU/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BORK/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
