lang: Add localization: en-IND
Introduces the `en-IND` locale, making the admin interface available in English (India).

This includes:
- Adding the `en-IND.yml` translation file.
- Registering the new locale within the application engine and updating tests.
- Adding a new documentation page with screenshots for the `en-IND` admin UI.
- Updating the documentation deployment workflow to trigger on version tags.

--- a/mat_views/config/locales/en-US.yml
+++ b/mat_views/config/locales/en-US.yml
@@ -90,6 +90,7 @@ en-US:
       en-BORK: Børk! Børk! Børk!
       en-CA: English (Canada)
       en-GB: English (United Kingdom)
+      en-IND: English (India)
       en-US: English (United States)
       en-US-pirate: Pirate English (Arrr!)
   mat_views:
