--- a/docs/pages/9.x admin-ui-en-ind.md
+++ b/docs/pages/9.x admin-ui-en-ind.md
@@ -1,12 +1,12 @@
 ---
-title: "English (Pirate)"
+title: "English (India)"
 layout: page
 parent: Admin UI
-nav_order: 7
-permalink: /admin-ui/en-US-pirate
+nav_order: 6
+permalink: /admin-ui/en-IND
 ---
 
-# English (Pirate) Admin UI
+# English (India) Admin UI
 
 ## Light Theme
 
@@ -14,43 +14,43 @@ permalink: /admin-ui/en-US-pirate
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to create or edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
 
 ## Dark Theme
 
@@ -58,40 +58,40 @@ Shows the user preferences page where you can configure settings related to the 
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to create or edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-US-pirate/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-IND/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
