--- a/mat_views/config/locales/en-BORK.yml
+++ b/mat_views/config/locales/en-BORK.yml
@@ -91,6 +91,7 @@ en-BORK:
       en-CA: English (Canada)
       en-GB: English (United Kingdom)
       en-IND: English (India)
+      en-KE: English (Kenya)
       en-US: English (United States)
       en-US-pirate: Pirate English (Arrr!)
   mat_views:
