lang: Add localization: en-MS
Adds comprehensive support for the English (Montserrat) `en-MS` locale.

This includes adding the translation file, updating the list of available languages, and integrating the new locale into the CI workflow for end-to-end testing and screenshot generation.

Additionally, documentation and feature tests are updated to include and validate the new language option.

--- a/mat_views/config/locales/en-IND.yml
+++ b/mat_views/config/locales/en-IND.yml
@@ -92,6 +92,7 @@ en-IND:
       en-GB: English (United Kingdom)
       en-IND: English (India)
       en-KE: English (Kenya)
+      en-MS: English (Montserrat)
       en-US: English (United States)
       en-US-pirate: Pirate English (Arrr!)
   mat_views:
