--- a/mat_views/config/locales/en-US.yml
+++ b/mat_views/config/locales/en-US.yml
@@ -92,6 +92,7 @@ en-US:
       en-GB: English (United Kingdom)
       en-IND: English (India)
       en-KE: English (Kenya)
+      en-MS: English (Montserrat)
       en-US: English (United States)
       en-US-pirate: Pirate English (Arrr!)
   mat_views:
