lang: Add localization: en-PK
Adds a new locale file for Nigerian English (`en-PK`) to provide translations for the admin interface.

Moved IND to IN

This includes translations for UI text, model attributes, error messages, and hints. New documentation with screenshots for both light and dark themes is also added for the new locale.

--- a/mat_views/config/locales/en-PK.yml
+++ b/mat_views/config/locales/en-PK.yml
@@ -1,4 +1,4 @@
-en-IND:
+en-PK:
   activerecord:
     attributes:
       mat_views/mat_view_definition:
@@ -84,7 +84,7 @@ en-IND:
         operation: "Select operation"
         status: "Select status"
   i18n:
-    name: English (India)
+    name: English (Pakistan)
   mat_views:
     actions: "Actions"
     all_definitions: "All definitions"
