lang: Add localization: en-TH
Adds a new locale file for Thailand English (`en-TH`) to provide translations for the admin interface.

This includes translations for UI text, model attributes, error messages, and hints. New documentation with screenshots for both light and dark themes is also added for the new locale.

--- a/docs/pages/9.x admin-ui-en-th.md
+++ b/docs/pages/9.x admin-ui-en-th.md
@@ -1,11 +1,11 @@
 ---
-title: "English (United Kingdom)"
+title: "English (Thailand)"
 layout: page
 parent: Admin UI
-permalink: /admin-ui/en-GB
+permalink: /admin-ui/en-TH
 ---
 
-# English (United Kingdom) Admin UI
+# English (Thailand) Admin UI
 
 ## Light Theme
 
@@ -13,43 +13,43 @@ permalink: /admin-ui/en-GB
 
 Shows the list of materialised view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-GB/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialised view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-GB/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-GB/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-GB/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialised view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-GB/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-GB/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialised views.
 
-<img src="/assets/images/app-screenshots/en-GB/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
 
 ## Dark Theme
 
@@ -57,40 +57,40 @@ Shows the user preferences page where you can configure settings related to the 
 
 Shows the list of materialised view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialised view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialised view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialised views.
 
-<img src="/assets/images/app-screenshots/en-GB/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-TH/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
