--- a/docs/pages/9.x admin-ui-en-ind.md
+++ b/docs/pages/9.x admin-ui-en-ind.md
@@ -29,7 +29,7 @@ Shows the form to create a new materialised view definition, including fields fo
 
 ### Definition Edit
 
-Shows the form to create or edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-IND/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
@@ -73,7 +73,7 @@ Shows the form to create a new materialised view definition, including fields fo
 
 ### Definition Edit
 
-Shows the form to create or edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-IND/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
