lang: Add localization: en-BS
Adds a new locale file for Bahamas English (`en-BS`) to provide translations for the admin interface.

This includes translations for UI text, model attributes, error messages, and hints. New documentation with screenshots for both light and dark themes is also added for the new locale.

closes: #230

--- a/docs/pages/101-faq.md
+++ b/docs/pages/101-faq.md
@@ -6,7 +6,7 @@ permalink: /faq
 
 # FAQ / Troubleshooting
 
-Practical answers to common questions and failure modes when working with **mat_views** (definitions → services → jobs → rake tasks), the **demo** app, and PostgreSQL materialised views.
+Practical answers to common questions and failure modes when working with **mat_views** (definitions → services → jobs → rake tasks), the **demo** app, and PostgreSQL materialized views.
 
 ---
 
@@ -150,7 +150,7 @@ ORDER BY d.name;
 
 ## Refresh
 
-### “`cannot refresh materialised view concurrently without a unique index`”
+### “`cannot refresh materialized view concurrently without a unique index`”
 
 - **Concurrent refresh requires a unique index that covers all rows** of the MV result.
 - Create it first (often on `id`/`user_id`):
