--- a/docs/pages/5.1 definitions.md
+++ b/docs/pages/5.1 definitions.md
@@ -13,13 +13,13 @@ Materialized views are defined and managed through the `MatViews::MatViewDefinit
 
 A **definition** is a persistent record that tells the engine:
 
-- what to **name** the materialised view,
+- what to **name** the materialized view,
 - the **SQL** that produces its rows,
 - how it should be **refreshed** (strategy and options),
 - what **indexes** (especially unique) it expects,
 - optional **dependencies** metadata for your own tooling.
 
-Once a definition exists, you can create, refresh (regular/concurrent/swap), and delete the materialised view using services, jobs, or rake tasks.
+Once a definition exists, you can create, refresh (regular/concurrent/swap), and delete the materialized view using services, jobs, or rake tasks.
 
 ---
 
@@ -213,7 +213,7 @@ This has no functional effect in the engine today; it’s useful for your dashbo
   Don’t. The engine will reject `public.mv_name`. Use `mv_name`; schema is resolved from `search_path`.
 
 - **Concurrent refresh without unique index**
-  You’ll get `ERROR: cannot refresh materialised view concurrently without a unique index`. Design your result set to include a unique key, then index it.
+  You’ll get `ERROR: cannot refresh materialized view concurrently without a unique index`. Design your result set to include a unique key, then index it.
 
 - **Volatile functions in SQL**
   Avoid `random()`, `clock_timestamp()`, etc. They can cause non-repeatable results and surprise diffs.
