--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -7,7 +7,7 @@ permalink: /engine/rake-tasks
 
 # Rake Tasks
 
-The engine ships a set of **Rake tasks** for creating, refreshing, and deleting PostgreSQL materialised views. Tasks log via `Rails.logger`, ask for confirmation (unless skipped), and enqueue background jobs through the **Adapter**.
+The engine ships a set of **Rake tasks** for creating, refreshing, and deleting PostgreSQL materialized views. Tasks log via `Rails.logger`, ask for confirmation (unless skipped), and enqueue background jobs through the **Adapter**.
 
 {: .note}
 
@@ -109,7 +109,7 @@ Tasks accept **positional args** and optional **env** overrides:
 
 - `view_name` may be either:
   - the **definition name** (unqualified, e.g., `mv_user_activity`), or
-  - a **schema-qualified materialised view** (e.g., `public.mv_user_activity`).
+  - a **schema-qualified materialized view** (e.g., `public.mv_user_activity`).
 
 - If you pass a schema-qualified name that **physically exists** but there’s **no definition** with that name, the task raises a helpful error (prevents operating on orphaned MVs silently).
 - Definition names must be **simple identifiers** (no dots). Schema is resolved from the DB `search_path` at runtime by services.
