--- a/docs/pages/9.x admin-ui-en-lol.md
+++ b/docs/pages/9.x admin-ui-en-lol.md
@@ -11,31 +11,31 @@ permalink: /admin-ui/en-LOL
 
 ### Definitions List
 
-Shows the list of materialised view definitions with their statuses and actions.
+Shows the list of materialized view definitions with their statuses and actions.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
-Displays detailed information about a specific materialised view definition, including its SQL query, refresh strategy, and history of runs.
+Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
-Shows the form to create a new materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
-Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
-Displays the list of recent runs for materialised view refresh operations, including their statuses, durations, and any errors encountered.
+Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
@@ -47,7 +47,7 @@ Shows detailed information about a specific run, including its logs, status, and
 
 ### Preferences
 
-Shows the user preferences page where you can configure settings related to the Admin UI and materialised views.
+Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
 <img src="/assets/images/app-screenshots/en-LOL/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
 
@@ -55,31 +55,31 @@ Shows the user preferences page where you can configure settings related to the 
 
 ### Definitions List
 
-Shows the list of materialised view definitions with their statuses and actions.
+Shows the list of materialized view definitions with their statuses and actions.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
-Displays detailed information about a specific materialised view definition, including its SQL query, refresh strategy, and history of runs.
+Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
-Shows the form to create a new materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
-Shows the form to edit a materialised view definition, including fields for the name, SQL query, refresh strategy, and other options.
+Shows the form to edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
-Displays the list of recent runs for materialised view refresh operations, including their statuses, durations, and any errors encountered.
+Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
@@ -91,6 +91,6 @@ Shows detailed information about a specific run, including its logs, status, and
 
 ### Preferences
 
-Shows the user preferences page where you can configure settings related to the Admin UI and materialised views.
+Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
 <img src="/assets/images/app-screenshots/en-LOL/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
