--- a/docs/pages/4.1 usage-definitions.md
+++ b/docs/pages/4.1 usage-definitions.md
@@ -7,7 +7,7 @@ permalink: /usage/manage-definitions
 
 As of writing, no UI is provided; all operations are via service objects, background jobs, and rake tasks.
 
-## Define a materialised view
+## Define a materialized view
 
 Definition is managed via the `MatViews::MatViewDefinition` model. You can create definitions in Rails console, seeds, or migrations.
 
@@ -26,11 +26,11 @@ definition = MatViews::MatViewDefinition.create!(
 )
 ```
 
-After defining, you can create, refresh, or delete the materialised view using the provided services, background jobs, or rake tasks as described in the [Manage Materialized Views](./manage-views) section.
+After defining, you can create, refresh, or delete the materialized view using the provided services, background jobs, or rake tasks as described in the [Manage Materialized Views](./manage-views) section.
 
-## Update a materialised view definition
+## Update a materialized view definition
 
-You can update an existing materialised view definition by modifying its attributes and saving the changes. For example:
+You can update an existing materialized view definition by modifying its attributes and saving the changes. For example:
 
 ```ruby
 definition = MatViews::MatViewDefinition.find_by(name: 'my_mat_view')
@@ -43,13 +43,13 @@ definition.update!(
 )
 ```
 
-After updating the definition, you may want to refresh the materialised view to apply the changes, using one of the methods described in the [Manage Materialized Views](./manage-views#refresh-the-materialised-view) section.
+After updating the definition, you may want to refresh the materialized view to apply the changes, using one of the methods described in the [Manage Materialized Views](./manage-views#refresh-the-materialized-view) section.
 
-## Delete a materialised view definition
+## Delete a materialized view definition
 
-To delete a materialised view definition, you can use the `destroy` method on the `MatViews::MatViewDefinition` instance. For example:
+To delete a materialized view definition, you can use the `destroy` method on the `MatViews::MatViewDefinition` instance. For example:
 
-Stop! Before deleting, ensure that you also drop the actual materialised view from the database if it exists, using the services or rake tasks provided, as deleting the definition does not automatically drop the view. See the [Manage Materialized Views](./manage-views#delete-the-materialised-view) section for details.
+Stop! Before deleting, ensure that you also drop the actual materialized view from the database if it exists, using the services or rake tasks provided, as deleting the definition does not automatically drop the view. See the [Manage Materialized Views](./manage-views#delete-the-materialized-view) section for details.
 
 ```ruby
 definition = MatViews::MatViewDefinition.find_by(name: 'my_mat_view')
