--- a/docs/pages/9.x admin-ui-en-bs.md
+++ b/docs/pages/9.x admin-ui-en-bs.md
@@ -1,11 +1,11 @@
 ---
-title: "English (Scots)"
+title: "English (Bahamas)"
 layout: page
 parent: Admin UI
-permalink: /admin-ui/en-SCOT
+permalink: /admin-ui/en-BS
 ---
 
-# English (Scots) Admin UI
+# English (Bahamas) Admin UI
 
 ## Light Theme
 
@@ -13,43 +13,43 @@ permalink: /admin-ui/en-SCOT
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-SCOT/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/light/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
 
 ## Dark Theme
 
@@ -57,40 +57,40 @@ Shows the user preferences page where you can configure settings related to the 
 
 Shows the list of materialized view definitions with their statuses and actions.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/definitions_list.png" alt="Definitions List" style="max-width: 100%; height: auto;">
 
 ### Definition View
 
 Displays detailed information about a specific materialized view definition, including its SQL query, refresh strategy, and history of runs.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/definitions_view.png" alt="Definition View" style="max-width: 100%; height: auto;">
 
 ### Definition New
 
 Shows the form to create a new materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/definitions_new.png" alt="Definition New" style="max-width: 100%; height: auto;">
 
 ### Definition Edit
 
 Shows the form to edit a materialized view definition, including fields for the name, SQL query, refresh strategy, and other options.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/definitions_edit.png" alt="Definition Edit" style="max-width: 100%; height: auto;">
 
 ### Runs List
 
 Displays the list of recent runs for materialized view refresh operations, including their statuses, durations, and any errors encountered.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/runs_list.png" alt="Runs List" style="max-width: 100%; height: auto;">
 
 ### Run View
 
 Shows detailed information about a specific run, including its logs, status, and any errors encountered during the refresh operation.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/runs_view.png" alt="Run View" style="max-width: 100%; height: auto;">
 
 ### Preferences
 
 Shows the user preferences page where you can configure settings related to the Admin UI and materialized views.
 
-<img src="/assets/images/app-screenshots/en-SCOT/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
+<img src="/assets/images/app-screenshots/en-BS/dark/preferences.png" alt="Preferences" style="max-width: 100%; height: auto;">
